app/assets/stylesheets/application.scss
@import "custom_bootstrap";
@import "rails_bootstrap_forms";

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

input[type=number] {
    -moz-appearance:textfield; /* Firefox */
}


.lift-on-hover {
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.lift-on-hover:hover {
    transform: translateY(-5px);
    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
}
.icon-hover {
    transition: transform 0.1s ease;
}

.icon-hover:hover {
    transform: scale(1.1); 
    cursor: pointer;
}

.link-hover:hover {
    text-decoration: underline;
}
.dropdown-menu li:hover {
    background-color: #E9E8E8;
}

.main-content {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-grow: 1;
}

.custom-link:hover {
  background-color: #F8F9FA  
}

.note-filter{
    width:105px;
}

.note-filter:hover{
    background-color: #c1cad3;
}

.home-page{
    position: relative;
    background-image: url('home-page.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    flex-grow: 1;
}


@media screen and (max-width: 540px) {
    .itinerary-nav {
        display: none;
    }
    .itinerary-footer {
        display: block;
    }
    .debtor-link {
        display: flex;
    }
}

@media screen and (min-width: 540px) {
    .itinerary-nav {
        display: block;
    }
    .itinerary-footer {
        display: none;
    }
    .debtor-link {
        display: none;
    }
}
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

// Itinerary item background colors 

.bg-dining {
    background-color: #f3bda1;
}

.bg-chekIn {
    background-color: #cbbbea;
}

.bg-chekOut {
    background-color: #a0ced9;
}
.bg-excursion {
    background-color: #a4de95;
}

.bg-business {
    background-color: #c0c7d0;
}

.bg-travel {
    background-color: #9ad3de;
}

